--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body {
 }
 
 .header {
-  width: 70%;
   margin: 0 auto;
   padding-top: 35px;
   display: -webkit-box;
@@ -63,11 +62,6 @@ body {
   font-size: 14px;
   font-weight: 700;
   padding-top: 5px;
-}
-
-.wrapper {
-  margin: 0 auto;
-  width: 70%;
 }
 
 .social {
@@ -373,5 +367,93 @@ input:checked + .slider:before {
 .attribution a {
   color: #198ff5;
   text-decoration: none;
+}
+
+@media only screen and (max-width: 680px) {
+  .social, .row, .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .title {
+    border-bottom: 1px solid #000;
+    padding-bottom: 20px;
+  }
+  .title, .toggle {
+    width: 100%;
+  }
+  .toggle {
+    padding: 20px 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .wrapper, .header {
+    width: 85%;
+    margin: 0 auto;
+  }
+  .social {
+    top: -40px;
+  }
+  .cards {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .row {
+    margin-bottom: 0;
+  }
+  .overview h2 {
+    padding-top: 30px;
+  }
+}
+
+@media only screen and (min-width: 681px) {
+  .wrapper, .header {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .cards {
+    width: 160px;
+  }
+}
+
+@media only screen and (min-width: 880px) {
+  .cards {
+    width: 190px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .cards {
+    width: 220px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .cards {
+    width: 230px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .wrapper, .header {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1350px) {
+  .wrapper, .header {
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 /*# sourceMappingURL=style.css.map */
