--- a/css/style.sass
+++ b/css/style.sass
@@ -40,7 +40,6 @@ body
     height: 250px
     z-index: 0
 .header
-    width: 70%
     margin: 0 auto
     padding-top: 35px
     display: flex
@@ -55,9 +54,6 @@ body
         font-weight: 700
         padding-top: 5px
 
-.wrapper
-    margin: 0 auto
-    width: 70%
 .social
     display: flex
     flex-direction: row
@@ -235,3 +231,57 @@ input:checked + .slider:before
     a
         color: $fb
         text-decoration: none
+
+@media only screen and(max-width: 680px)
+    .social, .row, .header
+        display: flex
+        flex-direction: column
+        align-items: center
+        width: 100%
+
+    .title
+        border-bottom: 1px solid #000
+        padding-bottom: 20px
+    .title, .toggle
+        width: 100%
+    .toggle
+        padding: 20px 0
+        justify-content: space-between
+    .wrapper, .header
+        width: 85%
+        margin: 0 auto
+    .social
+        top: -40px
+    .cards
+        width: 100%
+        margin-bottom: 20px
+    .row
+        margin-bottom: 0
+    .overview h2
+        padding-top: 30px
+@media only screen and(min-width: 681px)
+    .wrapper, .header
+        width: 90%
+        margin: 0 auto
+    .cards
+        width: 160px
+@media only screen and(min-width: 880px)
+
+    .cards
+        width: 190px
+@media only screen and(min-width: 1024px)
+
+    .cards
+        width: 220px
+
+@media only screen and(min-width: 1100px)
+    .cards
+        width: 230px
+@media only screen and(min-width: 1200px)
+    .wrapper, .header
+        width: 80%
+        margin: 0 auto
+@media only screen and(min-width: 1350px)
+    .wrapper, .header
+        width: 70%
+        margin: 0 auto
